Noreen/bugfixes (#45)
- fix mean_students_per_cohort not showing completely
- fix `position: absolute;`

--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ h2 {
 /* ==[ toolbar ]===================================================================================================== */
 
 #toolbar {
-    position: fixed;
+    position: absolute;
     right: 16px;
     top: 16px;
     display: flex;
